packages/openneuro-app/src/sass/crn_app/_dataset.file-tree.scss
//File structure  accordion
.file-structure.panel-group {
    margin: 5px 0 10px;
    border: 0;

    .panel-default {
        @include border-radius(0);
        background: none;
        border: 0;
        box-shadow: none;
        padding: 0;

        .accordion-icon {
            float: right;
            margin-top: 2px;
        }

        .type-icon {
            background: none;
            border: 0;
        }

        .panel-heading {
            @include border-radius(0);
            border: 0;
            border-color: $transparent;
            box-shadow: none;
            margin: 0;
            padding: 5px 0;
            background-color: transparent;
            text-align: left;

            .panel-title {
                color: $aaa;
                font-size: 13px;
                padding: 0;

                a {
                    text-decoration: none;
                    color: $primary;
                    color: var(--primary);
                    background: none;
                    margin: 0;
                    padding: 0 0 20px;
                    border-color: transparent;

                    &::before {content: 'Hide ';}
                    &.collapsed::before {content: 'View ';}

                    &:hover {
                        text-decoration: none;
                        color: $primary-hover;
                        color: var(--primary-hover);
                    }
                }
            }
        }

        .panel-collapse {
            margin-top: 0;

            .panel-body {
                border-top: 1px solid transparent;
                color: $c-56;
                font-family: $font-family-cabin;
                font-family: var(--font-family-cabin);
                font-size: 11px;

                >ul {
                    overflow: visible;
                    height: auto;
                    padding: 0;
                    margin: 0;

                    li {
                        padding: 6px 0 6px 10px;
                        list-style: none;
                        margin: 2px;

                        span.item-name > * {
                            white-space: normal;
                        }

                        .btn-file-folder {
                            color: $c-66;
                            width: 100%;
                            text-align: left;

                        }

                        .child-files {
                            margin-left: 5px;
                            border-left: 1px solid $c-9e;

                            li {
                                background: $white;

                                .message.error {color: $coral;}
                                .fa-times {cursor: pointer;}
                            }

                            li::before {
                                content: '';
                                height: 7px;
                                width: 7px;
                                background: none;
                                border-bottom: 1px solid $c-9e;
                                margin-left: -11px;
                                position: absolute;
                                margin-top: 3px;
                            }
                        }
                    }
                }
            }
        }
    }
}

.snapshot,
.dataset {
    .dataset-inner {
        .dataset-files, .dataset-git-hash {
            .file-structure.panel-group {
                .panel-default {

                    .panel-heading .panel-title {
                        font-size: 21px;
                        color: $c-33;
                        line-height: 21px;
                        padding: 0;
                        display: inline-block;
                        max-width: 100%;
                        margin-bottom: 5px;
                        font-family: $font-family-cabin;
                        font-family: var(--font-family-cabin);
                    }

                    .panel-body {
                        padding: 0;
                        border: 1px solid $ddd;
                        ul {
                            padding: 0;
                            position: relative;

                            li {
                                position: relative;

                                .cte-edit-button {
                                    position: absolute;
                                    top: 5px;
                                    right: 5px;
                                }
                            }
                        }

                        .filetree-editfile {
                            height: 20px;
                            float: none;
                            width: 100%;
                            display: block;
                            margin: 5px 0 0;

                            .btn-warn-load {
                                padding: 0px;
                                margin: 0px;
                            }
                        }
                    }
                }

                .panel-collapse {
                    .panel-body {
                        >ul.uploading-directory {
                            >li.uploading-spinner {
                                padding: 10px;
                                .loading-wrap {
                                    padding: 30px;
                                    width: 100%;
                                }
                            }
                            >li.uploading-progress {
                                padding: 10px;
                            }
                        }
                    }
                }
            }
        }
        .dataset-git-hash {
            .col-xs-12 .panel-group .panel.panel-default .panel-body {
                padding: 8px 12px;
            }
        }
    }
}

.color-green{
    color: $brand-success;
}


.color-warning{
    color: $coral;
}

